javaservice-loadbalancing-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: javaservice
  name: javaservice
spec:
  ports:
    - nodePort: 30946
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: javaservice
  type: LoadBalancer
