javaservice-service.yml
apiVersion: v1
kind: Service
metadata:
  name: javaservice
spec:
  ports:
    - nodePort: 31281
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: javaservice
  type: NodePort
