phpservice-loadbalancing-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: phpservice
  name: phpservice
spec:
  ports:
    - nodePort: 30945
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: phpservice
  type: LoadBalancer
