phpservice-service.yml
apiVersion: v1
kind: Service
metadata:
  name: phpservice
spec:
  ports:
    - nodePort: 31280
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: phpservice
  type: NodePort
